@@ -17,7 +17,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-#include "rts2schedbag.h"
+#include "rts2scheduler/schedbag.h"
 
 #include "configuration.h"
 #include "utilsfunc.h"
