@@ -17,7 +17,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-#include "rts2schedule.h"
+#include "rts2scheduler/schedule.h"
 #include "rts2db/accountset.h"
 #include "rts2db/targetset.h"
 
