@@ -17,7 +17,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-#include "ticket.h"
+#include "rts2scheduler/ticket.h"
 
 #include "configuration.h"
 #include "rts2db/sqlerror.h"
