@@ -17,7 +17,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
-#include "utils.h"
+#include "rts2scheduler/utils.h"
 
 #include <stdlib.h>
 
