@@ -1,4 +1,5 @@
 2012-05-07
+ * scheduler library
  * moved cupola to library file
  * MaxDome II (Sirius dome) sceleton
 
